--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.1",
     "form-data": "^4.0.1",
     "fs": "^0.0.1-security",
+    "moment-timezone": "^0.5.48",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.1",
     "node-fetch": "^3.3.2",
