--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,15 @@
 http {
-    limit_req_zone $binary_remote_addr zone=api_zone:10m rate=1r/s;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    gzip on;
-    gzip_types text/plain application/javascript text/css application/json image/svg+xml;
-    gzip_min_length 1000;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+    gzip  on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     server {
         listen 80;
@@ -15,23 +21,23 @@ http {
         listen 443 ssl;
         server_name clippergpt.com www.clippergpt.com;
 
-        ssl_certificate     /etc/letsencrypt/live/clippergpt.com/fullchain.pem;
+        ssl_certificate /etc/letsencrypt/live/clippergpt.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/clippergpt.com/privkey.pem;
 
-        client_max_body_size     2048M;
-        client_body_buffer_size  256K;
-        client_body_timeout      300s;
+        client_max_body_size 2048M;
+        client_body_buffer_size 256K;
+        client_body_timeout 300s;
 
-        proxy_request_buffering  off;
-        proxy_buffering          off;
-        proxy_http_version       1.1;
-        proxy_set_header         Connection "";
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
 
         location / {
-            root   /usr/share/nginx/html/dist;
-            index  index.html;
+            root /usr/share/nginx/html/dist;
+            index index.html;
             try_files $uri $uri/ /index.html;
-            add_header Access-Control-Allow-Origin '*';
+            add_header 'Access-Control-Allow-Origin' '*' always;
         }
 
         location ~* \.(?:js|css|png|jpg|jpeg|gif|svg|ico|woff2?|ttf|eot)$ {
@@ -43,18 +49,20 @@ http {
         }
 
         location /api/ {
-            limit_req zone=api_zone burst=5 nodelay;
-
-            proxy_pass            http://express:8000/;
-            proxy_set_header      Host $host;
-            proxy_set_header      X-Real-IP $remote_addr;
-            proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass http://express:8000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
             proxy_connect_timeout 300s;
-            proxy_send_timeout    300s;
-            proxy_read_timeout    300s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
 
             chunked_transfer_encoding on;
         }
     }
+}
+
+events {
+    worker_connections 1024;
 }
