--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "aestera",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^7.0.1",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -22,6 +24,6 @@
     "mysql2": "^3.14.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.7",
-    "uuid": "^11.0.3"
+    "uuid": "^11.1.0"
   }
 }
