--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "aestera",
   "license": "ISC",
   "dependencies": {
+    "@tus/file-store": "^2.0.0",
+    "@tus/server": "^2.2.0",
     "archiver": "^7.0.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
