--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,11 +15,6 @@ server {
     client_body_buffer_size 512K;
     client_body_timeout 300s; 
 
-    proxy_request_buffering off;
-    proxy_buffering off;
-    proxy_http_version 1.1;
-    proxy_set_header Connection "";
-
     location / {
         root /usr/share/nginx/html/dist;
         index index.html;
@@ -27,15 +22,38 @@ server {
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
+    location /api/edit/upload {
+        proxy_pass http://express:8000/edit/upload;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+
+        proxy_http_version 1.1;
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_cache off;
+        
+        proxy_connect_timeout 500s;
+        proxy_send_timeout 500s;
+        proxy_read_timeout 500s;
+        
+        chunked_transfer_encoding on;
+        
+        proxy_method $request_method;
+    }
+
     location /api/ {
         proxy_pass http://express:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
         proxy_connect_timeout 500s;
-        proxy_send_timeout    500s;
-        proxy_read_timeout    500s;
+        proxy_send_timeout 500s;
+        proxy_read_timeout 500s;
 
         chunked_transfer_encoding on;
     }
