--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,8 +22,8 @@ server {
         add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
-    location /api/edit/upload {
-        proxy_pass http://express:8000/edit/upload;
+    location /edit/upload/ {
+        proxy_pass http://express:8000/edit/upload/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -40,8 +40,6 @@ server {
         proxy_read_timeout 500s;
         
         chunked_transfer_encoding on;
-        
-        proxy_method $request_method;
     }
 
     location /api/ {
@@ -50,11 +48,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
 
         proxy_connect_timeout 500s;
         proxy_send_timeout 500s;
         proxy_read_timeout 500s;
 
         chunked_transfer_encoding on;
+        
+        proxy_http_version 1.1;
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_cache off;
     }
 }
