--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "@tus/file-store": "^2.0.0",
     "@tus/server": "^2.2.0",
     "archiver": "^7.0.1",
-    "aws-sdk": "^2.1692.0",
-    "axios": "^1.8.4",
+    "@aws-sdk/client-ec2": "^3.583.0",
+    "@aws-sdk/client-s3": "^3.583.0",
+    "@aws-sdk/lib-storage": "^3.583.0",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "form-data": "^4.0.1",
     "fs": "^0.0.1-security",
     "moment-timezone": "^0.5.48",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.14.1",
+    "mysql2": "^3.10.0",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.7",
-    "uuid": "^11.1.0"
+    "nodemon": "^3.1.3",
+    "openai": "^4.47.1",
+    "uuid": "^10.0.0"
   }
 }
